--- a/usps/index.html
+++ b/usps/index.html
@@ -3,8 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bootcampii</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	
+<header>
+	<img src="img/logo.png" alt="">
+	<nav>
+		<ul class="clearfix">
+			<li><a href="#">home</a></li>
+			<li><a href="#">about us</a></li>
+			<li><a href="#">products</a></li>
+			<li><a href="#">contact us</a></li>
+		</ul>
+	</nav>
+</header>
+<div id="hero"></div>
+<main>
+	<img src="img/avatar.png" alt="">
+	<article>
+		<h1>Greetings</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non unde impedit iure, tempora cum voluptatum consequatur obcaecati harum tempore! Laborum cumque molestias recusandae veniam ut doloribus eum neque amet dolorem!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, odit molestias reprehenderit qui suscipit error quasi tempore magni sit nostrum aliquam soluta, vel obcaecati quas doloremque cum, dolorem sint molestiae.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi autem dolor nobis, saepe veritatis a itaque, animi labore quos fuga? Dolore recusandae quis dolorum autem, alias deleniti libero tempore ipsam!</p>
+		<h2>Tony H</h2>
+	</article>
+</main>
+<footer class="clearfix">
+	<p>Copyright&copy; 2014. All rights reserverd.</p>
+</footer>
 	
 </body>
 </html>
